# tree_menu

./: .gitignore  pyproject.toml
config/: settings.py
tree_menu/: admin.py  models.py
tree_menu/migrations/: 0001_initial.py  0002_menu_is_active.py
